--- a/www/index.html
+++ b/www/index.html
@@ -10,6 +10,7 @@
     <link href="css/style.css" rel="stylesheet">
     -->
 
+    <script src="http://ajax.aspnetcdn.com/ajax/jquery/jquery-1.9.0.js"></script>
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above -->
     <link href="css/ionic.app.css" rel="stylesheet">
 
